scrollbar fix

--- a/src/styles/CardView.scss
+++ b/src/styles/CardView.scss
@@ -13,6 +13,7 @@
 	border-radius: 8px;
 	padding: 16px;
 	position: relative;
+	overflow: hidden;
 
 	-ms-flex-direction: column;
 	flex-direction: column;
